# src/modules/cars/entities/Category.ts
@@ -1,0 +1,24 @@
+import { v4 as uuidV4 } from "uuid";
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm"
+
+@Entity("categories")
+class Category {
+  @PrimaryColumn()
+  id?: string;
+  @Column()
+  name: string;
+  @Column()
+  description: string
+  @CreateDateColumn()
+  created_at: Date
+
+  constructor() {
+    if (!this.id) {
+      this.id = uuidV4()
+    }
+  }
+}
+
+
+
+export { Category }
